# QuantyLab

./: .gitignore  LICENSE  README.md  pyproject.toml
quanty_sim/: __init__.py  main.py  readers.py  rixs_quanty.py  xas_quanty.py
quanty_sim/Templates/: Co2+_D4h_RIXS_2p3d.lua  Co2+_D4h_XAS_2p.lua  Co2+_Oh_RIXS_2p3d.lua  Co2+_Oh_XAS_2p.lua
