[project]
name = "QuantyLab"
version = "0.1.0"
description = "Ferramentas para simulações com Quanty"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Gabriel", email="gabriel.amorim@lnls.br" }
]

# 1. LISTA DE DEPENDÊNCIAS
# Isso garante que quem instalar sua lib tenha tudo o que precisa
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "jinja2",
    "brixs", 
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 2. LOCALIZAÇÃO DO PACOTE
[tool.setuptools.packages.find]
where = ["."] 
include = ["quanty_sim*"]  # Garante que ele pegue a pasta correta do código

# 3. INCLUSÃO DE ARQUIVOS NÃO-PYTHON (CRUCIAL)
# Isso diz: "Dentro do pacote quanty_sim, inclua estas pastas e arquivos"
[tool.setuptools.package-data]
"quanty_sim" = [
    "Templates/*.lua",   # Todos os arquivos .lua na pasta Templates
    "quanty_win/*",      # O executável (e qualquer outro arquivo) na pasta quanty_win
]